[gd_scene load_steps=29 format=3 uid="uid://c3ffql15mo0aj"]

[ext_resource type="Script" path="res://scripts/player/fps_controller.gd" id="1_k00bc"]
[ext_resource type="Material" uid="uid://b4gwd5h7ixvct" path="res://materials/player.tres" id="2_7qda3"]
[ext_resource type="PackedScene" uid="uid://v8g6dodhumyk" path="res://meshes/weapons/weapon.tscn" id="3_835tj"]
[ext_resource type="Script" path="res://scripts/player/reticle.gd" id="4_ntsfx"]
[ext_resource type="Theme" uid="uid://cjxg2tt7m1r7e" path="res://ui/themes/debug.tres" id="5_tib1u"]
[ext_resource type="Script" path="res://scripts/game/debug.gd" id="6_kecrd"]
[ext_resource type="Script" path="res://scripts/player/state_machine.gd" id="7_f1ve2"]
[ext_resource type="Script" path="res://scripts/player/IdlePlayerState.gd" id="8_rqw4w"]
[ext_resource type="Script" path="res://scripts/player/WalkingPlayerState.gd" id="9_wvqjd"]
[ext_resource type="Script" path="res://scripts/player/SprintingPlayerState.gd" id="10_ssjb3"]
[ext_resource type="Script" path="res://scripts/player/CrouchingPlayerState.gd" id="11_4t53l"]
[ext_resource type="Script" path="res://scripts/player/SlidingPlayerState.gd" id="12_walwr"]
[ext_resource type="Script" path="res://scripts/player/JumpingPlayerState.gd" id="13_fbjl8"]
[ext_resource type="Script" path="res://scripts/player/FallingPlayerState.gd" id="14_7wlsx"]
[ext_resource type="Script" path="res://scripts/player/WeaponViewport.gd" id="15_yu4nu"]
[ext_resource type="Script" path="res://scripts/player/WeaponCamera.gd" id="16_577f2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_u6tj1"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6tv51"]
material = ExtResource("2_7qda3")

[sub_resource type="BoxMesh" id="BoxMesh_5pbwv"]
size = Vector3(0.61, 0.185, 0.335)

[sub_resource type="Animation" id="Animation_uw13e"]
resource_name = "Crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.75, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("OverheadShapeCast:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}

[sub_resource type="Animation" id="Animation_8nvfx"]
resource_name = "JumpEnd"
length = 0.4
step = 0.05
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0, -0.00787261, -0.0244866, -0.0253917, 0, 0.0631828, 0.00110227, -0.000156721, -0.255985, -0.000826702, 0, 0),
"times": PackedFloat32Array(0, 0.1, 0.4)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1.45, 0), Vector3(0, 1.5, 0)]
}

[sub_resource type="Animation" id="Animation_fq5i0"]
resource_name = "JumpStart"
length = 0.55
step = 0.05
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.1, 0.000118845, -0.015, -0.1, 0, 0.25, 0.000275567, 0.000118845, -0.1, -0.000275567, 0.1, 0),
"times": PackedFloat32Array(0, 0.2, 0.55)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.55),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1.45, 0), Vector3(0, 1.5, 0)]
}

[sub_resource type="Animation" id="Animation_jvs44"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("OverheadShapeCast:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CameraController:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CameraController:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CameraController:position:z")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CameraController/Camera3D:position:x")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CameraController/Camera3D:position:y")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CameraController/Camera3D:position:z")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("CameraController/Camera3D:fov")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [75.0]
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("CameraController:rotation:x")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-0.0698132, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_epy2o"]
resource_name = "Sliding"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.75, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("OverheadShapeCast:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerStateMachine/SlidingPlayerState:SPEED")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6.0, 4.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CameraController/Camera3D:fov")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3, 4.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [75.0, 84.0, 75.0]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PlayerStateMachine/SlidingPlayerState")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finish"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CameraController:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.5, 3, 4.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_jyus3"]
resource_name = "Sprint"
length = 1.2
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController/Camera3D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, 0, 0, 0.2, 0, 0.05, -0.071, -0.013, 0.125, 0.031, 0.06, 0, 0, 0, 0, -0.05, -0.07, 0, 0.082, -0.028, -0.06, 0, 0, 0, 0, 0, -0.035, 0, 0, 0),
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1.01789, 1.2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController/Camera3D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, 0, 0, 0.09, 0.004, 0.033, -0.07, 0, 0.075, 0.001, -0.015, -0.087, 0, 0.072, 0, 0.033, -0.087, 0, 0.102, 0, -0.015, -0.08, 0, 0.065, 0, 0, -0.055, 0, 0, 0),
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1, 1.2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController/Camera3D:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.5, 0.826549, 1.01619, 1.2)
}

[sub_resource type="Animation" id="Animation_e01ao"]
resource_name = "Walking"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.015, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -0.015, -0.2, -1.22804e-05, 0.2, -0.00012727, 0, -0.25, 0, 0.25, 0, 0.015, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(1.5, -0.25, 0, 0.3, 0.00987589, 1.55, -0.25, 0, 0.25, 0, 1.5, -0.3, 0.00912428, 0.3, 0.00862324, 1.55, -0.25, 0, 0.25, 0, 1.5, -0.3, 0.00887382, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m2i2j"]
_data = {
"Crouching": SubResource("Animation_uw13e"),
"JumpEnd": SubResource("Animation_8nvfx"),
"JumpStart": SubResource("Animation_fq5i0"),
"RESET": SubResource("Animation_jvs44"),
"Sliding": SubResource("Animation_epy2o"),
"Sprinting": SubResource("Animation_jyus3"),
"Walking": SubResource("Animation_e01ao")
}

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_cvmy6"]
length = 0.75

[node name="FPSController" type="CharacterBody3D" node_paths=PackedStringArray("VISOR", "CAMERA_CONTROLLER", "ANIMATIONPLAYER", "CROUCH_SHAPECAST", "PLAYERSTATEMACHINE", "USERINTERFACE", "WEAPONVIEWPORT")]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_k00bc")
VISOR = NodePath("CollisionShape3D/Visor")
MOUSE_SENSITIVITY = 1.0
TILT_LOWER_LIMIT = -1.571
TILT_UPPER_LIMIT = 1.571
CAMERA_CONTROLLER = NodePath("CameraController/Camera3D")
ANIMATIONPLAYER = NodePath("AnimationPlayer")
CROUCH_SHAPECAST = NodePath("OverheadShapeCast")
PLAYERSTATEMACHINE = NodePath("PlayerStateMachine")
USERINTERFACE = NodePath("UserInterface")
WEAPONVIEWPORT = NodePath("WeaponViewport")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_u6tj1")

[node name="PlaceholderMesh" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("CapsuleMesh_6tv51")

[node name="Visor" type="MeshInstance3D" parent="CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, -0.325)
mesh = SubResource("BoxMesh_5pbwv")

[node name="CameraController" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.997564, 0.0697565, 0, -0.0697565, 0.997564, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="CameraController"]
unique_name_in_owner = true
cull_mask = 1048573

[node name="ReflectionProbe" type="ReflectionProbe" parent="CameraController/Camera3D"]
visible = false
update_mode = 1
intensity = 0.44
size = Vector3(100, 50, 100)
enable_shadows = true

[node name="WeaponRig" type="Node3D" parent="CameraController/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, -1.49012e-08, 0, 1.49012e-08, 1, 0, 0, 0)
visible = false

[node name="Weapon" parent="CameraController/Camera3D/WeaponRig" instance=ExtResource("3_835tj")]
transform = Transform3D(-0.992541, 0.12189, 0.0024289, 0.00451701, 0.0168577, 0.999848, 0.12183, 0.9924, -0.0172825, 0.13, -0.165, -0.22)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m2i2j")
}
blend_times = [&"Walking", &"Walking", 0.5, &"Walking", &"Sprinting", 0.5, &"Crouching", &"Walking", 0.5, &"Crouching", &"Sprinting", 0.5, &"JumpStart", &"Walking", 0.5, &"JumpEnd", &"Walking", 0.5, &"JumpEnd", &"JumpStart", 0.1, &"Sprinting", &"Walking", 0.5, &"Sprinting", &"Crouching", 0.5]

[node name="OverheadShapeCast" type="ShapeCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.5, 0)
shape = SubResource("SeparationRayShape3D_cvmy6")
target_position = Vector3(0, 0, 0)
margin = 0.5
debug_shape_custom_color = Color(0, 1, 0, 1)

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Reticle" type="CenterContainer" parent="UserInterface" node_paths=PackedStringArray("PLAYER_CONTROLLER")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_ntsfx")
PLAYER_CONTROLLER = NodePath("../..")
RETICLE_DISTANCE = 10.0

[node name="Top" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="Right" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="Bottom" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="Left" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0

[node name="DebugPanel" type="PanelContainer" parent="UserInterface"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 50.0
theme = ExtResource("5_tib1u")
script = ExtResource("6_kecrd")

[node name="MarginContainer" type="MarginContainer" parent="UserInterface/DebugPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UserInterface/DebugPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("7_f1ve2")
CURRENT_STATE = NodePath("IdlePlayerState")

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("8_rqw4w")

[node name="WalkingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("9_wvqjd")
SPEED = 3.0
ACCELERATION = 0.075

[node name="SprintingPlayerState" type="Node" parent="PlayerStateMachine"]
unique_name_in_owner = true
script = ExtResource("10_ssjb3")
SPEED = 7.0

[node name="CrouchingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("11_4t53l")
SPEED = 1.0
TOGGLE_CROUCH = true

[node name="SlidingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("12_walwr")

[node name="JumpingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("13_fbjl8")

[node name="FallingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("14_7wlsx")

[node name="WeaponViewport" type="SubViewportContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="WeaponViewport"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 0
script = ExtResource("15_yu4nu")

[node name="Camera3D" type="Camera3D" parent="WeaponViewport/SubViewport" node_paths=PackedStringArray("MAIN_CAMERA")]
visible = false
cull_mask = 1048574
script = ExtResource("16_577f2")
MAIN_CAMERA = NodePath("../../../CameraController/Camera3D/WeaponRig")
